--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,7 +12,7 @@ layout: default
   {% endunless %}
 {% endif %}
 
-<div id="main" role="main" border-right-width="100px">
+<div id="main" role="main">
   {% include sidebar.html %}
 
   <div class="archive">
