--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -93,7 +93,7 @@
 
       &.current {
         color: #fff;
-        background: $primary-color;
+        background: #505050 // $primary-color;
       }
 
       &.disabled {
